fix profile page overlapping div

--- a/block-planes-client/src/components/profile/profile.css
+++ b/block-planes-client/src/components/profile/profile.css
@@ -1,4 +1,5 @@
-/* .userrowprofile {
+.userrowprofile {
+    margin-top: 20px;
     padding-top: 1.5%;
     padding-left: 2%;
     background-color: #000000;
